fixed button text color on mobile

--- a/src/Menu.css
+++ b/src/Menu.css
@@ -31,6 +31,7 @@
 }
 
 .buttons > button {
+  color: black;
   height: 88px;
   width: 100%;
   border: 3px black solid;
