--- a/src/PauseMenu.css
+++ b/src/PauseMenu.css
@@ -31,6 +31,7 @@
   border-bottom-width: 15px;
   padding: 1.2rem 0;
   font-size: 24px;
+  color: black;
   font-weight: 700;
 }
 
